Updates to search

--- a/app/views/psd-revised-flow/add-new-product/old/add-a-barcode-2.html
+++ b/app/views/psd-revised-flow/add-new-product/old/add-a-barcode-2.html
@@ -37,14 +37,14 @@
       </div>
 
       <label class="govuk-label" for="case-search-term">
-        Barcode, serial number or Amazon ASIN
+        Barcode, serial number or ASIN
       </label>
       <div class="govuk-input__wrapper opss-search__wrapper ">
         <div class="autocomplete" style="position: relative; width: 100%;">
-          <input id="autocompleteInput" type="text" name="myCountry" placeholder="">
-          <div id="autocompleteSuggestions" class="autocomplete-items">
+          <input id="autocomplete-input" class="autocomplete-input" type="text" name="myCountry" placeholder="">
+          <div id="autocomplete-suggestions" class="autocomplete-suggestions autocomplete-items">
           </div>
-          <button class="govuk-button govuk-!-margin-bottom-0" id="searchButton2">
+          <button class="govuk-button govuk-!-margin-bottom-0 search-button2" id="search-button2">
             <span class="govuk-visually-hidden">Submit search</span>
           </button>
         </div>
