--- a/app/assets/sass/new-header.scss
+++ b/app/assets/sass/new-header.scss
@@ -78,14 +78,9 @@ ul.govuk-list li {
 .search-container {
   background-color: #f3f2f1;
   padding: 10px;
-  border-bottom: 1px solid #b1b4b6;
   border-top: 1px solid #b1b4b6;
+  border-bottom: 1px solid #b1b4b6;
   margin-top: -1px;
-}
-
-.close-button {
-  float: right;
-  cursor: pointer;
 }
 
 .autocomplete-items {
@@ -108,7 +103,7 @@ ul.govuk-list li {
   border-right: 1px solid #b1b4b6;
   border-bottom: 1px solid #b1b4b6;
   margin-left: 1px;
-  width: 416px;
+  width: 591px;
   font-size: 16px;
   color: #0b0c0c;
   font-family: "GDS Transport", arial, sans-serif;
@@ -127,7 +122,7 @@ ul.govuk-list li {
 }
 
 .autocomplete-input {
-  width: 425px;
+  width: 600px;
   height: 34px;
   border: 2px solid #0b0c0c;
   padding-left: 6px;
@@ -137,17 +132,17 @@ ul.govuk-list li {
 
 body .autocomplete-input:focus {
   border: 4px solid #0b0c0c;
-  width: 423px;
+  width: 598px;
   height: 30px;
   outline: none;
   box-shadow: 0 0 0 3px #f9de4b;
-  padding-left: 4px;
+  margin-right: -4px;
 }
 
 .autocomplete {
   position: relative;
   display: inline-block;
-  width: 435px;
+  width: 610px;
 }
 
 .autocomplete-suggestions {
@@ -156,7 +151,23 @@ body .autocomplete-input:focus {
   left: 0;
   right: 0;
   z-index: 99;
-  max-height: 240px;
+  max-height: 340px;
   overflow-y: auto;
-  width: 435px;
+  width: 610px;
+}
+
+.search-button2 {
+  margin-left: -4px;
+}
+
+.centered-search-container {
+  width: 960px;
+  margin: 0 auto; 
+}
+
+.close-search-box {
+  width: 48px;
+  height: 48px;
+  background-color: grey;
+
 }
