--- a/app/views/layout-new-header.html
+++ b/app/views/layout-new-header.html
@@ -47,43 +47,55 @@
     containerClasses: "govuk-width-container"
   }) }}
 
-
-<nav class="govuk-width-container">
-  <ul>
-    <li><a href="#" class="active">Notifications</a></li>
-    <li><a href="#">Products</a></li>
-    <li><a href="#">Businesses</a></li>
-    <li><a href="#">Risk assessments</a></li>
-    <li><a href="#">Account settings</a></li>
-    <li class="search" style="float: right;">
-      <a href="#" id="searchLink" onclick="toggleSearch()">
-        <img class="govuk-!-margin-right-1 search-icon" src="../../public/images/new-search.svg" alt="Tick">
-        <span>Search database</span>
-      </a>
-    </li>
-  </ul>
-  <hr class="govuk-section-break govuk-section-break--visible">
-</nav>
-
-<div id="searchContainer" class="search-container" style="display: none;">
-
-  <label class="govuk-heading-m govuk-!-margin-top-7 govuk-!-margin-bottom-2" for="case-search-term">
-    Search Product Safety Database
-  </label>
   
-  <div class="govuk-input__wrapper opss-search__wrapper">
-    <div class="autocomplete" style="position: relative; width: 100%;">
-      <input id="autocompleteInput" class="govuk-input" type="text">
-      <div id="autocompleteSuggestions" class="autocomplete-items">
+  <nav class="govuk-width-container">
+    <ul>
+      <li><a href="#" class="active">Notifications</a></li>
+      <li><a href="#">Products</a></li>
+      <li><a href="#">Businesses</a></li>
+      <li><a href="#">Risk assessments</a></li>
+      <li><a href="#">Account settings</a></li>
+      <li class="search" style="float: right;">
+        <a href="#" id="searchLink" onclick="toggleSearch()" class="search-link">
+          <img class="govuk-!-margin-right-1 search-icon" src="../../public/images/new-search.svg" alt="Tick">
+          <span>Search database</span>
+        </a>
+      </li>
+    </ul>
+    <hr class="govuk-section-break govuk-section-break--visible">
+  </nav>
+  
+<div id="searchContainer" class="search-container" style="display: none;">
+  <div class="centered-search-container">
+
+    <label class="govuk-heading-m govuk-!-margin-bottom-2 govuk-!-margin-top-7" for="case-search-term">
+      Search Product Safety Database
+    </label>
+    <div class="govuk-input__wrapper opss-search__wrapper govuk-!-margin-bottom-7">
+      <div class="autocomplete" style="position: relative; width: 100%;">
+        <input id="autocomplete-input" class="autocomplete-input" type="text" name="myCountry" placeholder="" style="width: 600px;">
+        <div id="autocomplete-suggestions" class="autocomplete-suggestions autocomplete-items">
+        </div>
+        <button class="govuk-button govuk-!-margin-bottom-0 search-button2" id="search-button2">
+          <span class="govuk-visually-hidden">Submit search</span>
+        </button>
       </div>
-      <button class="govuk-button govuk-!-margin-bottom-0" id="searchButton2">
-        <span class="govuk-visually-hidden">Submit search</span>
-      </button>
     </div>
   </div>
-  
 </div>
+
+
+<div class="govuk-width-container govuk-phase-banner">
+  <p class="govuk-phase-banner__content">
+    <strong class="govuk-tag govuk-phase-banner__content__tag">
+      Beta
+    </strong>
+    <span class="govuk-phase-banner__text">
+      This is a new service – your <a class="govuk-link" href="#">feedback</a> will help us to improve it.
+    </span>
+  </p>
 </div>
+
 
 <script>
   function toggleSearch() {
@@ -93,15 +105,15 @@
 
   document.addEventListener("DOMContentLoaded", function() {
     var countries = [
-        {name: "Swan gas hob", info: "Product"},
+        {name: "Swan gas hob", info: "Product", url: "product-psd"},
         {name: "Swan gas hob elbow joint failure", info: "Notification"},
         {name: "Swan gas hob - Test report 1209357862.docx", info: "Document"},
         {name: "Swan gas hob - Risk assessment", info: "Risk assessment"},
         {name: "Swan Construction Ltd", info: "Business"},
     ];
 
-    var input = document.getElementById("autocompleteInput");
-    var suggestionBox = document.getElementById("autocompleteSuggestions");
+    var input = document.getElementById("autocomplete-input");
+    var suggestionBox = document.getElementById("autocomplete-suggestions");
     
     input.addEventListener("input", function() {
         var val = this.value.toLowerCase();
@@ -127,6 +139,9 @@
                 div.addEventListener("click", function(e) {
                     input.value = country.name;
                     suggestionBox.innerHTML = "";
+                    if (country.url) {
+                        window.location.href = country.url;
+                    }
                 });
                 
                 suggestionBox.appendChild(div);
@@ -140,38 +155,17 @@
     });
 });
 
-  document.getElementById('searchButton2').addEventListener('click', function() {
-    var selectedOption = document.getElementById('autocompleteInput').value;
-
-    var urls = {
-      "Swan gas hob": "product-psd",
-      "Swan gas hob elbow joint failure": "not-found",
-      "Swan gas hob - Test report 1209357862.docx": "multiple-products",
-      "Swan gas hob - Risk assessment": "product-bl",
-      "Swan Construction Ltd": "product-bl"
-    };
-
-    if (urls[selectedOption]) {
-      window.location.href = urls[selectedOption];
-    } else {
-      console.log("No URL found for selected option");
-    }
-  });
+document.getElementById('search-button2').addEventListener('click', function() {
+    // Always redirect to "abc.com"
+    window.location.href = "search-results";
+});
 
 </script>
 
 
 
-  <div class="govuk-width-container govuk-phase-banner">
-    <p class="govuk-phase-banner__content">
-      <strong class="govuk-tag govuk-phase-banner__content__tag">
-        Beta
-      </strong>
-      <span class="govuk-phase-banner__text">
-        This is a new service – your <a class="govuk-link" href="#">feedback</a> will help us to improve it.
-      </span>
-    </p>
-  </div>
+
+
 {% endblock %}
 
 {% block bodyEnd %}
