--- a/app/assets/sass/new-header.scss
+++ b/app/assets/sass/new-header.scss
@@ -72,7 +72,11 @@ ul.govuk-list li {
 
 .search-icon {
   position: relative;
-  top: 2px;
+  top: 17px;
+}
+
+.search {
+  margin-top: -29px;
 }
 
 .search-container {
@@ -169,5 +173,74 @@ body .autocomplete-input:focus {
   width: 48px;
   height: 48px;
   background-color: grey;
+}
 
+.custom-table {
+  width: 100%;
+  border-collapse: separate;
+  border-spacing: 0;
+  border-top: 1px solid #0b0c0c;
+  border-bottom: 1px solid #0b0c0c;
+  table-layout: fixed;
+}
+
+.custom-table-2 {
+  width: 100%;
+  border-collapse: separate;
+  border-spacing: 0;
+  table-layout: fixed;
+}
+
+.custom-table td {
+  padding: 10px 0;
+  vertical-align: top;
+  border-bottom: 1px solid #b1b4b6;
+}
+
+.custom-table tr:last-child td {
+  border-bottom: none;
+}
+
+.custom-table-2 td {
+  padding: 10px 0;
+  vertical-align: top;
+  border-bottom: 1px solid #b1b4b6;
+}
+
+.custom-table-2 tr:last-child td {
+  border-bottom: none;
+}
+
+.table-image {
+  width: 90px;
+  height: 90px;
+  display: block;
+}
+
+.table-content {
+  padding: 10px 20px;
+  text-align: left;
+}
+
+.table-action {
+  padding: 10px 0;
+  text-align: right;
+}
+
+.custom-table td:first-child {
+  width: 110px;
+  text-align: center;
+}
+
+.custom-table-2 td:first-child {
+  width: 110px;
+  text-align: center;
+}
+
+.custom-table td.table-content {
+  width: 450px;
+}
+
+.custom-table-2 td.table-content {
+  width: 450px;
 }
