--- a/app/views/responsible-person-address/responsible-person-address_alt.html
+++ b/app/views/responsible-person-address/responsible-person-address_alt.html
@@ -5,10 +5,20 @@
 {% endblock %}
 
 {% block beforeContent %}
-    {{ govukBackLink({
-        text: "Back",
-        href: "/index"
-    }) }}
+<div class="govuk-breadcrumbs">
+    <ol class="govuk-breadcrumbs__list">
+      <li class="govuk-breadcrumbs__list-item">
+        <a class="govuk-breadcrumbs__link" href="#">Home</a>
+      </li>
+      <li class="govuk-breadcrumbs__list-item">
+        <a class="govuk-breadcrumbs__link" href="#">Passports, travel and living abroad</a>
+      </li>
+      <li class="govuk-breadcrumbs__list-item">
+        <a class="govuk-breadcrumbs__link" href="#">Travel abroad</a>
+      </li>
+    </ol>
+  </div>
+  
 {% endblock %}
 
 
