--- a/app/views/index.html
+++ b/app/views/index.html
@@ -55,12 +55,7 @@
 
  <p><a href="/psd-revised-flow/add-new-product/task-list-start">Add product to notification</a></p>
 
-
-
-
-
- 
-
+ <p><a href="/psd-revised-flow/search/start-page">Search</a></p>
 
 
     </div>
