--- a/app/views/layout-new-header-products.html
+++ b/app/views/layout-new-header-products.html
@@ -50,8 +50,8 @@
   
   <nav class="govuk-width-container">
     <ul>
-      <li><a href="#">Notifications</a></li>
-      <li><a href="#">Products</a></li>
+      <li><a href="#" >Notifications</a></li>
+      <li><a href="#" class="active">Products</a></li>
       <li><a href="#">Businesses</a></li>
       <li><a href="#">Risk assessments</a></li>
       <li><a href="#">Account settings</a></li>
