--- a/app/views/layout-new-header-risk-assessments.html
+++ b/app/views/layout-new-header-risk-assessments.html
@@ -51,9 +51,9 @@
   <nav class="govuk-width-container">
     <ul>
       <li><a href="notifications" >Notifications</a></li>
-      <li><a href="products" class="active">Products</a></li>
+      <li><a href="products" >Products</a></li>
       <li><a href="businesses">Businesses</a></li>
-      <li><a href="risk-assessments">Risk assessments</a></li>
+      <li><a href="risk-assessments" class="active">Risk assessments</a></li>
       <li><a href="account-settings">Account settings</a></li>
       <li class="search" style="float: right;">
         <a href="#" id="searchLink" onclick="toggleSearch()" class="search-link">
