--- a/app/views/layout-new-header.html
+++ b/app/views/layout-new-header.html
@@ -43,18 +43,18 @@
   {{ govukHeader({
     homepageUrl: "/",
     serviceName: "Product Safety Database",
-    serviceUrl: "/",
+    serviceUrl: "homepage-ur",
     containerClasses: "govuk-width-container"
   }) }}
 
   
   <nav class="govuk-width-container">
     <ul>
-      <li><a href="#">Notifications</a></li>
-      <li><a href="#">Products</a></li>
-      <li><a href="#">Businesses</a></li>
-      <li><a href="#">Risk assessments</a></li>
-      <li><a href="#">Account settings</a></li>
+      <li><a href="notifications" >Notifications</a></li>
+      <li><a href="products" >Products</a></li>
+      <li><a href="businesses">Businesses</a></li>
+      <li><a href="risk-assessments">Risk assessments</a></li>
+      <li><a href="account-settings">Account settings</a></li>
       <li class="search" style="float: right;">
         <a href="#" id="searchLink" onclick="toggleSearch()" class="search-link">
           <img class="govuk-!-margin-right-1 search-icon" src="../../public/images/search-box.svg" alt="Tick">
