--- a/app/views/psd-revised-flow/search/product.html
+++ b/app/views/psd-revised-flow/search/product.html
@@ -22,7 +22,7 @@
 <div class="govuk-grid-row">
   <div class="govuk-grid-column-two-thirds">
     <h1 class="govuk-heading-xl">
-      Swan Gas Hob
+      Swan Gas Hob - not started
     </h1>
   </div>
 </div>
