--- a/app/views/psd-revised-flow/search/notifications.html
+++ b/app/views/psd-revised-flow/search/notifications.html
@@ -21,13 +21,13 @@
   <div class="govuk-grid-column-full govuk-!-padding-0"> 
 
     <div class="govuk-grid-column-two-thirds">
-      <h1 class="govuk-heading-l govuk-!-margin-bottom-9">Product safety notifications</h1>
+      <h1 class="govuk-heading-l govuk-!-margin-bottom-9">Notifications</h1>
     </div>        
 
     <div class="govuk-grid-column-one-third">
       <div class="govuk-form-group bottom-box opss-text-align-right opss-text-align-bottom">
         <button type="submit" class="govuk-button govuk-button--secondary" data-module="govuk-button">
-          Create a new notification
+          Add a new notification
         </button>
       </div>
     </div>
